# Final-project

./: CMakeLists.txt
include/: detection.h  detection_segmentation.h
src/: detection.cpp  main.cpp
src/cpp/: detection_segmentation.cpp  main.cpp
src/python/: Final_project.ipynb  Final_project.py
